--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ h3 {
 
 .video_container h2 {
 	grid-row: 1;
-	-ms-grid-row:2;
+	-ms-grid-row:1;
 	grid-column:1 / 3 ;
 	-ms-grid-column:1;
 	-ms-grid-column-span:2;
@@ -245,12 +245,13 @@ h3 {
 	padding-bottom:15px;
 }
 
-/*.video_container nav li:nth-child(1) {
-
-}*/
+.video_container nav li:nth-child(1) {
+	-ms-grid-column:1;
+}
 
 .video_container nav li:nth-child(2) {
 	width:94%;
+	-ms-grid-column:2;
 	color:rgba(0,0,0,.5);
 
 /*	color:rgba(0,0,0, .5);*/
