--- a/style.css
+++ b/style.css
@@ -115,21 +115,27 @@ h3 {
 	/*background-color:orange;*/
 	margin-bottom: 2em;
 
+	background-image:-webkit-gradient(
+      linear,
+      left top, left bottom,
+      from(rgba(200, 55, 200, 0.25)),
+      to(rgba(200, 74, 0, 0.28))
+    ), url(img/chicago.jpg);
 
 	background-image:-webkit-linear-gradient(
       rgba(200, 55, 200, 0.25),
       rgba(200, 74, 0, 0.28)
-    ), url(img/Chicago.jpg);
+    ), url(img/chicago.jpg);
 
 	background-image:-o-linear-gradient(
       rgba(200, 55, 200, 0.25),
       rgba(200, 74, 0, 0.28)
-    ), url(img/Chicago.jpg);
+    ), url(img/chicago.jpg);
 
 	background-image:linear-gradient(
       rgba(200, 55, 200, 0.25),
       rgba(200, 74, 0, 0.28)
-    ), url(img/Chicago.jpg);
+    ), url(img/chicago.jpg);
 
 	background-size:cover;
 	background-position: center;
