--- a/style.css
+++ b/style.css
@@ -841,7 +841,7 @@ input[type="email"], select {
 	margin-bottom: 2%;
 }
 
-textarea[type="message"], select {
+textarea[type="text"], select {
 	width:100%;
 	height: 10.8em;
 	margin-bottom:2%;
