--- a/style.css
+++ b/style.css
@@ -874,7 +874,7 @@ input[type="submit"], select {
 }
 
 .icons a:nth-child(1):hover {
-	color:yellow;
+	color:black;
 }
 .icons a:nth-child(2):hover {
 	color:red;
