--- a/style.css
+++ b/style.css
@@ -3,37 +3,67 @@
 	padding: 0;
 }
 
+@font-face {
+    font-family: 'robotoregular';
+    src: url('fonts/roboto_regular/Roboto-Regular-webfont.eot');
+    src: url('fonts/roboto_regular/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/roboto_regular/Roboto-Regular-webfont.woff2') format('woff2'),
+         url('fonts/roboto_regular/Roboto-Regular-webfont.woff') format('woff'),
+         url('fonts/roboto_regular/Roboto-Regular-webfont.ttf') format('truetype'),
+         url('fonts/roboto_regular/Roboto-Regular-webfont.svg#robotoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'roboto_condensedlight';
+    src: url('fonts/roboto_lightcondensed/RobotoCondensed-Light-webfont.eot');
+    src: url('fonts/roboto_lightcondensed/RobotoCondensed-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/roboto_lightcondensed/RobotoCondensed-Light-webfont.woff2') format('woff2'),
+         url('fonts/roboto_lightcondensed/RobotoCondensed-Light-webfont.woff') format('woff'),
+         url('fonts/roboto_lightcondensed/RobotoCondensed-Light-webfont.ttf') format('truetype'),
+         url('fonts/roboto_lightcondensed/RobotoCondensed-Light-webfont.svg#roboto_condensedlight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 /*font-family: 'Roboto', sans-serif;*/
 
 
 p , a {
 	font-size: 1em;
 	line-height: 1.375em;
-	font-family: 'Roboto' , sans-serif;
-	font-weight: 400;
+/*	font-family: 'Roboto' , sans-serif;
+	font-weight: 400;*/
+	font-family: 'robotoregular';
 }
 
 h1 {
 	font-size: 3em;
 	line-height: 1.05em;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 300;
+/*	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;*/
+	font-family: 'roboto_lightcondensed';
 
 }
 
 h2 {
 	font-size: 2.25em;
 	line-height: 1.25em;
-	font-family: 'Roboto Condensed', sans-serif;
+	font-family: 'roboto_lightcondensed';
+/*	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 300;
-}
+}*/
 
 h3 {
 	font-size: 2.25em;
 	/*font-size: 1.75em;*/
 	line-height: 1.25em;
-	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 300;
+	font-family: 'roboto_lightcondensed';
+/*	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;*/
 }
 
 
