--- a/style.css
+++ b/style.css
@@ -54,12 +54,12 @@ h2 {
 	line-height: 1.25em;
 	font-family: 'roboto_lightcondensed';
 /*	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 300;
-}*/
+	font-weight: 300;*/
+}
 
 h3 {
 	font-size: 2.25em;
-	/*font-size: 1.75em;*/
+	/*font-size: 1.75em;
 	line-height: 1.25em;
 	font-family: 'roboto_lightcondensed';
 /*	font-family: 'Roboto Condensed', sans-serif;
