--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h2 {
 
 h3 {
 	font-size: 2.25em;
-	/*font-size: 1.75em;
+	font-size: 1.75em;
 	line-height: 1.25em;
 	font-family: 'roboto_lightcondensed';
 /*	font-family: 'Roboto Condensed', sans-serif;
@@ -81,7 +81,7 @@ h3 {
 	-ms-grid-column-span:3;
 	grid-row: 1;
 	-ms-grid-row:1;
-	/*font-size: 1.5em;*/
+	/*font-size: 1.5em;
 /*	diplay: inline-block;
 */
 
