--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 	padding: 0;
 }
 
-@font-face {
+/*@font-face {
     font-family: 'robotoregular';
     src: url('fonts/roboto_regular/Roboto-Regular-webfont.eot');
     src: url('fonts/roboto_regular/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
@@ -28,42 +28,42 @@
     font-style: normal;
 
 }
-
+*/
 /*font-family: 'Roboto', sans-serif;*/
 
 
 p , a {
 	font-size: 1em;
 	line-height: 1.375em;
-/*	font-family: 'Roboto' , sans-serif;
-	font-weight: 400;*/
-	font-family: 'robotoregular';
+	font-family: 'Roboto' , sans-serif;
+	font-weight: 400;
+	/*font-family: "robotoregular" , sans-serif;*/
 }
 
 h1 {
 	font-size: 3em;
 	line-height: 1.05em;
-/*	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 300;*/
-	font-family: 'roboto_lightcondensed';
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;
+/*	font-family: "roboto_lightcondensed" , sans-serif; */
 
 }
 
 h2 {
 	font-size: 2.25em;
 	line-height: 1.25em;
-	font-family: 'roboto_lightcondensed';
-/*	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 300;*/
+/*	font-family: "roboto_lightcondensed" , sans-serif;*/
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;
 }
 
 h3 {
 	font-size: 2.25em;
 	font-size: 1.75em;
 	line-height: 1.25em;
-	font-family: 'roboto_lightcondensed';
-/*	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 300;*/
+/*	font-family: "roboto_lightcondensed" , sans-serif;*/
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 300;
 }
 
 
@@ -97,7 +97,8 @@ h3 {
 	text-align: center;
 	width:15%;
 	cursor: pointer;
-	font-family: 'Roboto Condensed' , sans-serif;
+	font-family: 'Roboto Condensed , sans-serif';
+/*	font-family: "roboto_lightcondensed", sans-serif;*/
 	font-weight: 300;
 }
 
