--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h3 {
 	text-align: center;
 	width:15%;
 	cursor: pointer;
-	font-family: 'Roboto Condensed , sans-serif';
+	font-family: 'Roboto Condensed' , sans-serif;
 /*	font-family: "roboto_lightcondensed", sans-serif;*/
 	font-weight: 300;
 }
