--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
 /*font-family: 'Roboto', sans-serif;*/
 
 
+
 p , a {
 	font-size: 1em;
 	line-height: 1.375em;
@@ -278,11 +279,67 @@ h3 {
 	width:94%;
 	-ms-grid-column:2;
 	color:rgba(0,0,0,.5);
-
-/*	color:rgba(0,0,0, .5);*/
 }
 
+/*============================================================================================*/
+/*youtube lazy loading iframe*/
 
+.wrapper2 {
+	width: 100%;
+	height: 50vh;
+	position: relative;
+
+}
+
+.youtube {
+	background-color: #000;
+	cursor: pointer;
+	width: 100%;
+	height: 50vh;
+	position:relative;
+}
+.youtube img {
+	width: 100%;
+	top: 7.5%;
+	left: 0;
+	opacity: 0.7;
+	height:42vh;
+}
+.youtube .play-button {
+	width: 90px;
+	height: 60px;
+	background-color: #333;
+	box-shadow: 0 0 30px rgba( 0,0,0,0.6 );
+	z-index: 1;
+	opacity: 0.8;
+	border-radius: 6px;
+	top:50%;
+	left:50%;
+}
+.youtube .play-button:before {
+	content: "";
+	border-style: solid;
+	border-width: 15px 0 15px 26.0px;
+	border-color: transparent transparent transparent #fff;
+}
+.youtube img,
+.youtube .play-button {
+	cursor: pointer;
+}
+.youtube img,
+.youtube iframe,
+.youtube .play-button,
+.youtube .play-button:before {
+	position: absolute;
+}
+.youtube .play-button,
+.youtube .play-button:before {
+	top: 50%;
+	left: 50%;
+	transform: translate3d( -50%, -50%, 0 );
+}
+
+/*============================================================================================*/
 
 
 
@@ -305,7 +362,7 @@ h3 {
 
 .overlay_container:hover .overlay {
 	opacity: 1;
-	z-index: 100;
+	z-index: 999;
 	-webkit-transform:scale(1.05); /* Safari and Chrome */
     -moz-transform:scale(1.05); /* Firefox */
     -ms-transform:scale(1.05); /* IE 9 */
@@ -666,6 +723,7 @@ PART 2
 	grid-column:1;
 	-ms-grid-column:1;
 	border:none;
+	margin-bottom: 2%;
 }
 
 .overlay .project_website {
