--- a/style.css
+++ b/style.css
@@ -1206,6 +1206,7 @@ input[type="submit"], select {
 	font-size: 1.5em;
 	background-color:rgba(255,255,255,0.8);
 	color:black;
+	cursor: pointer;
 
 
 }
