--- a/style.css
+++ b/style.css
@@ -632,7 +632,7 @@ PART 2
 .overlay_container:nth-child(odd) {
 	margin-left:2%;
 	margin-right: 2%;
-	transform: translateX(-100%);
+/* 	transform: translateX(-100%);
 	
 	-webkit-transform: translateX(-100%);
 	    -ms-transform: translateX(-100%);
@@ -641,18 +641,18 @@ PART 2
   	transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);center;
   	-webkit-transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);center;
 
-  	-o-transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);center;
+  	-o-transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);center; */
 }
 
 .overlay_container:nth-child(even) {
 	margin-right:2%;
-	transform: translateX(100%);
+/* 	transform: translateX(100%);
 
 	-webkit-transform: translateX(100%);
 	    -ms-transform: translateX(100%);
     -webkit-transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);
     -o-transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);center;
-  	transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);center;
+  	transition: all 600ms cubic-bezier(0.165, 0.84, 0.44, 1);center; */
 }
 
 
