uploaded effects projects
uploaded

--- a/style.css
+++ b/style.css
@@ -514,6 +514,17 @@ h3 {
 	grid-template-columns: 1fr;
 	-ms-grid-columns:1fr;
 }
+.overlay_container:nth-child(8) {
+	grid-row:5;
+	-ms-grid-row:5;
+	grid-column: 2 / 3;
+	-ms-grid-column:2;
+	-ms-grid-column-span:1;
+	display:grid;
+	display: -ms-grid;
+	grid-template-columns: 1fr;
+	-ms-grid-columns:1fr;
+}
 
 /*==================================
 PART 2
@@ -530,23 +541,11 @@ PART 2
 	display:none;
 }
 
-.overlay_container:nth-child(8) {
+.overlay_container:nth-child(9) {
 	grid-row:3;
 	-ms-grid-row:3;
 	grid-column: 1 / 2;
 	-ms-grid-column:1;
-	-ms-grid-column-span:1;
-	display:grid;
-	display: -ms-grid;
-	grid-template-columns: 1fr;
-	-ms-grid-columns:1fr;
-}
-
-.overlay_container:nth-child(9) {
-	grid-row:3;
-	-ms-grid-row:3;
-	grid-column: 2 / 3;
-	-ms-grid-column:2;
 	-ms-grid-column-span:1;
 	display:grid;
 	display: -ms-grid;
@@ -555,10 +554,10 @@ PART 2
 }
 
 .overlay_container:nth-child(10) {
-	grid-row:4;
-	-ms-grid-row:4;
-	grid-column: 1 / 2;
-	-ms-grid-column:1;
+	grid-row:3;
+	-ms-grid-row:3;
+	grid-column: 2 / 3;
+	-ms-grid-column:2;
 	-ms-grid-column-span:1;
 	display:grid;
 	display: -ms-grid;
@@ -569,8 +568,8 @@ PART 2
 .overlay_container:nth-child(11) {
 	grid-row:4;
 	-ms-grid-row:4;
-	grid-column: 2 / 3;
-	-ms-grid-column:2;
+	grid-column: 1 / 2;
+	-ms-grid-column:1;
 	-ms-grid-column-span:1;
 	display:grid;
 	display: -ms-grid;
@@ -579,10 +578,10 @@ PART 2
 }
 
 .overlay_container:nth-child(12) {
-	grid-row:3;
-	-ms-grid-row:3;
-	grid-column: 1 / 2;
-	-ms-grid-column:1;
+	grid-row:4;
+	-ms-grid-row:4;
+	grid-column: 2 / 3;
+	-ms-grid-column:2;
 	-ms-grid-column-span:1;
 	display:grid;
 	display: -ms-grid;
@@ -593,6 +592,18 @@ PART 2
 .overlay_container:nth-child(13) {
 	grid-row:3;
 	-ms-grid-row:3;
+	grid-column: 1 / 2;
+	-ms-grid-column:1;
+	-ms-grid-column-span:1;
+	display:grid;
+	display: -ms-grid;
+	grid-template-columns: 1fr;
+	-ms-grid-columns:1fr;
+}
+
+.overlay_container:nth-child(14) {
+	grid-row:3;
+	-ms-grid-row:3;
 	grid-column: 2 / 3;
 	-ms-grid-column:2;
 	-ms-grid-column-span:1;
@@ -602,7 +613,7 @@ PART 2
 	-ms-grid-columns:1fr;
 }
 
-.overlay_container:nth-child(14) {
+.overlay_container:nth-child(15) {
 	grid-row:4;
 	-ms-grid-row:4;
 	grid-column: 1 / 2;
@@ -614,7 +625,7 @@ PART 2
 	-ms-grid-columns:1fr;
 }
 
-.overlay_container:nth-child(15) {
+.overlay_container:nth-child(16) {
 	grid-row:4;
 	-ms-grid-row:4;
 	grid-column: 2 / 3;
@@ -626,7 +637,7 @@ PART 2
 	-ms-grid-columns:1fr;
 }
 
-.overlay_container:nth-child(16) {
+.overlay_container:nth-child(17) {
 	grid-row:5;
 	-ms-grid-row:5;
 	grid-column: 1 / 2;
@@ -694,9 +705,15 @@ PART 2
 		background: no-repeat; 
 		background-position:center;
 		background-size: cover;
-		background-image:url('img/lower_thirds.png');
+		background-image:url('img/water.png');
 	}
 .project_02 {
+		background: no-repeat; 
+		background-position:center;
+		background-size: cover;
+		background-image:url('img/lower_thirds.png');
+	}
+.project_03 {
 		background: no-repeat; 
 		background-position:center;
 		background-size: cover;
@@ -725,7 +742,7 @@ PART 2
 
 
 
-.project_03 {
+.project_04 {
 	/*	background:url(img_01.jpg) no-repeat fixed;*/
 /*	background-image:linear-gradient(
       rgba(200, 55, 200, 0.25),
@@ -753,14 +770,14 @@ PART 2
 		background-size: cover;
 }
 
-.project_04 {
+.project_05 {
 
 		background-image:url(img/event_promo.jpg);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
 }
-.project_05 {
+.project_06 {
 
 		background-image:url(img/real_estate_promo.jpg);
 		background-repeat: no-repeat;
@@ -768,7 +785,7 @@ PART 2
 		background-size: cover;
 }
 
-.project_06 {
+.project_07 {
 		background-image:linear-gradient(
         rgba(222, 245, 231, 0.25), 
         rgba(27, 24, 23, 0.28)
@@ -793,7 +810,7 @@ PART 2
 		background-size: cover;
 }
 
-.project_07 {
+.project_08 {
 		background-image:linear-gradient(
         rgba(222, 245, 231, 0.25), 
         rgba(27, 24, 23, 0.28)
@@ -818,37 +835,37 @@ PART 2
 		background-size: cover;
 }
 
-.project_08 {
-		background-image:linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-
-		background-image: -webkit-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-		
-		background-image: -o-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-
-		background-image: -moz-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-
-
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: cover;
-}
-
 .project_09 {
 		background-image:linear-gradient(
         rgba(222, 245, 231, 0.25), 
         rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+
+		background-image: -webkit-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+		
+		background-image: -o-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+
+		background-image: -moz-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+
+
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+}
+
+.project_10 {
+		background-image:linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
     ),  url(img/calculator.jpg);
 
 
@@ -873,7 +890,7 @@ PART 2
 }
 
 
-.project_10 {
+.project_11 {
 		background: no-repeat; 
 		background-position:center;
 		background-size: cover;
@@ -902,7 +919,7 @@ PART 2
 
 
 
-.project_11 {
+.project_12 {
 	/*	background:url(img_01.jpg) no-repeat fixed;*/
 	background-image:linear-gradient(
       rgba(200, 55, 200, 0.25),
@@ -928,14 +945,14 @@ PART 2
 		background-size: cover;
 }
 
-.project_12 {
+.project_13 {
 
-		background-image:url(img/everlast.jpg);
+		background-image:url(img/fire.png);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
 }
-.project_13 {
+.project_14 {
 
 		background-image:url(img/central_park.jpg);
 		background-repeat: no-repeat;
@@ -943,7 +960,7 @@ PART 2
 		background-size: cover;
 }
 
-.project_14 {
+.project_15 {
 
 		background-image:url(img/chicago2.jpg);
 		background-repeat: no-repeat;
