--- a/style.css
+++ b/style.css
@@ -525,6 +525,28 @@ h3 {
 	grid-template-columns: 1fr;
 	-ms-grid-columns:1fr;
 }
+.overlay_container:nth-child(9) {
+	grid-row:6;
+	-ms-grid-row:6;
+	grid-column: 1 / 2;
+	-ms-grid-column:1;
+	-ms-grid-column-span:1;
+	display:grid;
+	display: -ms-grid;
+	grid-template-columns: 1fr;
+	-ms-grid-columns:1fr;
+}
+.overlay_container:nth-child(10) {
+	grid-row:6;
+	-ms-grid-row:6;
+	grid-column: 2 / 3;
+	-ms-grid-column:2;
+	-ms-grid-column-span:1;
+	display:grid;
+	display: -ms-grid;
+	grid-template-columns: 1fr;
+	-ms-grid-columns:1fr;
+}
 
 /*==================================
 PART 2
@@ -541,33 +563,9 @@ PART 2
 	display:none;
 }
 
-.overlay_container:nth-child(9) {
-	grid-row:3;
-	-ms-grid-row:3;
-	grid-column: 1 / 2;
-	-ms-grid-column:1;
-	-ms-grid-column-span:1;
-	display:grid;
-	display: -ms-grid;
-	grid-template-columns: 1fr;
-	-ms-grid-columns:1fr;
-}
-
-.overlay_container:nth-child(10) {
-	grid-row:3;
-	-ms-grid-row:3;
-	grid-column: 2 / 3;
-	-ms-grid-column:2;
-	-ms-grid-column-span:1;
-	display:grid;
-	display: -ms-grid;
-	grid-template-columns: 1fr;
-	-ms-grid-columns:1fr;
-}
-
 .overlay_container:nth-child(11) {
-	grid-row:4;
-	-ms-grid-row:4;
+	grid-row:3;
+	-ms-grid-row:3;
 	grid-column: 1 / 2;
 	-ms-grid-column:1;
 	-ms-grid-column-span:1;
@@ -578,8 +576,8 @@ PART 2
 }
 
 .overlay_container:nth-child(12) {
-	grid-row:4;
-	-ms-grid-row:4;
+	grid-row:3;
+	-ms-grid-row:3;
 	grid-column: 2 / 3;
 	-ms-grid-column:2;
 	-ms-grid-column-span:1;
@@ -590,8 +588,8 @@ PART 2
 }
 
 .overlay_container:nth-child(13) {
-	grid-row:3;
-	-ms-grid-row:3;
+	grid-row:4;
+	-ms-grid-row:4;
 	grid-column: 1 / 2;
 	-ms-grid-column:1;
 	-ms-grid-column-span:1;
@@ -602,6 +600,30 @@ PART 2
 }
 
 .overlay_container:nth-child(14) {
+	grid-row:4;
+	-ms-grid-row:4;
+	grid-column: 2 / 3;
+	-ms-grid-column:2;
+	-ms-grid-column-span:1;
+	display:grid;
+	display: -ms-grid;
+	grid-template-columns: 1fr;
+	-ms-grid-columns:1fr;
+}
+
+.overlay_container:nth-child(15) {
+	grid-row:3;
+	-ms-grid-row:3;
+	grid-column: 1 / 2;
+	-ms-grid-column:1;
+	-ms-grid-column-span:1;
+	display:grid;
+	display: -ms-grid;
+	grid-template-columns: 1fr;
+	-ms-grid-columns:1fr;
+}
+
+.overlay_container:nth-child(16) {
 	grid-row:3;
 	-ms-grid-row:3;
 	grid-column: 2 / 3;
@@ -613,7 +635,7 @@ PART 2
 	-ms-grid-columns:1fr;
 }
 
-.overlay_container:nth-child(15) {
+.overlay_container:nth-child(17) {
 	grid-row:4;
 	-ms-grid-row:4;
 	grid-column: 1 / 2;
@@ -625,7 +647,7 @@ PART 2
 	-ms-grid-columns:1fr;
 }
 
-.overlay_container:nth-child(16) {
+.overlay_container:nth-child(18) {
 	grid-row:4;
 	-ms-grid-row:4;
 	grid-column: 2 / 3;
@@ -637,7 +659,7 @@ PART 2
 	-ms-grid-columns:1fr;
 }
 
-.overlay_container:nth-child(17) {
+.overlay_container:nth-child(19) {
 	grid-row:5;
 	-ms-grid-row:5;
 	grid-column: 1 / 2;
@@ -705,15 +727,29 @@ PART 2
 		background: no-repeat; 
 		background-position:center;
 		background-size: cover;
+		background-image:url('img/dynamic.jpg');
+	}
+
+.project_02 {
+		background: no-repeat; 
+		background-position:center;
+		background-size: cover;
+		background-image:url('img/typography.jpg');
+	}
+
+.project_03 {
+		background: no-repeat; 
+		background-position:center;
+		background-size: cover;
 		background-image:url('img/water.png');
 	}
-.project_02 {
+.project_04 {
 		background: no-repeat; 
 		background-position:center;
 		background-size: cover;
 		background-image:url('img/lower_thirds.png');
 	}
-.project_03 {
+.project_05 {
 		background: no-repeat; 
 		background-position:center;
 		background-size: cover;
@@ -742,7 +778,7 @@ PART 2
 
 
 
-.project_04 {
+.project_06 {
 	/*	background:url(img_01.jpg) no-repeat fixed;*/
 /*	background-image:linear-gradient(
       rgba(200, 55, 200, 0.25),
@@ -770,14 +806,14 @@ PART 2
 		background-size: cover;
 }
 
-.project_05 {
+.project_07 {
 
 		background-image:url(img/event_promo.jpg);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
 }
-.project_06 {
+.project_08 {
 
 		background-image:url(img/real_estate_promo.jpg);
 		background-repeat: no-repeat;
@@ -785,7 +821,7 @@ PART 2
 		background-size: cover;
 }
 
-.project_07 {
+.project_09 {
 		background-image:linear-gradient(
         rgba(222, 245, 231, 0.25), 
         rgba(27, 24, 23, 0.28)
@@ -810,7 +846,7 @@ PART 2
 		background-size: cover;
 }
 
-.project_08 {
+.project_10 {
 		background-image:linear-gradient(
         rgba(222, 245, 231, 0.25), 
         rgba(27, 24, 23, 0.28)
@@ -835,62 +871,62 @@ PART 2
 		background-size: cover;
 }
 
-.project_09 {
-		background-image:linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-
-		background-image: -webkit-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-		
-		background-image: -o-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-
-		background-image: -moz-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/beo.jpg);
-
-
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: cover;
-}
-
-.project_10 {
-		background-image:linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/calculator.jpg);
-
-
-		background-image: -webkit-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/calculator.jpg);
-		
-		background-image: -o-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/calculator.jpg);
-
-		background-image: -moz-linear-gradient(
-        rgba(222, 245, 231, 0.25), 
-        rgba(27, 24, 23, 0.28)
-    ),  url(img/calculator.jpg);
-
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: cover;
-}
-
-
 .project_11 {
+		background-image:linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+
+		background-image: -webkit-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+		
+		background-image: -o-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+
+		background-image: -moz-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/beo.jpg);
+
+
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+}
+
+.project_12 {
+		background-image:linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/calculator.jpg);
+
+
+		background-image: -webkit-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/calculator.jpg);
+		
+		background-image: -o-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/calculator.jpg);
+
+		background-image: -moz-linear-gradient(
+        rgba(222, 245, 231, 0.25), 
+        rgba(27, 24, 23, 0.28)
+    ),  url(img/calculator.jpg);
+
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+}
+
+
+.project_13 {
 		background: no-repeat; 
 		background-position:center;
 		background-size: cover;
@@ -919,7 +955,7 @@ PART 2
 
 
 
-.project_12 {
+.project_14 {
 	/*	background:url(img_01.jpg) no-repeat fixed;*/
 	background-image:linear-gradient(
       rgba(200, 55, 200, 0.25),
@@ -945,14 +981,14 @@ PART 2
 		background-size: cover;
 }
 
-.project_13 {
+.project_15 {
 
 		background-image:url(img/fire.png);
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
 }
-.project_14 {
+.project_16 {
 
 		background-image:url(img/central_park.jpg);
 		background-repeat: no-repeat;
@@ -960,7 +996,7 @@ PART 2
 		background-size: cover;
 }
 
-.project_15 {
+.project_17 {
 
 		background-image:url(img/chicago2.jpg);
 		background-repeat: no-repeat;
